<resources>
    <string name="app_name">Iblive</string>
    <string name="discover">Discover</string>
    <string name="map">Map</string>
    <string name="my_posts">My Posts</string>
    <string name="requests">Requests</string>
    <string name="my_network">My Network</string>
    <string name="search_discover">Where would you like to connect?</string>
    <string name="home">Home</string>
    <string name="cardsSubscription">Cards/Subscription</string>
    <string name="support">Support</string>
    <string name="myrequests">My Requests</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="connect">Connect</string>
    <string name="google_maps_api_key">AIzaSyDaG0IAFzMVb93Q6klmFNm1_n2U4WBeSLw</string>
    <string name="title_location_permission">GPS Permission</string>
    <string name="text_location_permission">GPS is required to be enabled for this section to get your location</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="send_request">Send Request</string>
    <string name="accept">Accept</string>
    <string name ="reject">Reject</string>
    <string name ="new_requests">New Requests</string>
</resources>
